--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,14 @@
+.site-header img {
+  width: 180px;
+  border-radius: 50%;
+  display: block;
+  margin: 0 auto 15px auto;
+}
 
+.site-title {
+  text-align: center;
+}
+
+.site-description {
+  text-align: center;
+}
